--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:id="@+id/time_xml"
         android:layout_width="246dp"
         android:layout_height="55dp"
-        android:text="0.0"
+        android:text="0:0:0 secs"
         android:textAlignment="textStart"
         android:textColor="#FFFFFF"
         android:textSize="40sp"
